[gd_scene load_steps=9 format=3 uid="uid://dm6qhxh2w1rmx"]

[ext_resource type="Script" path="res://src/systems/combat/BattleController.gd" id="1_battle"]
[ext_resource type="Script" path="res://src/systems/combat/DamageCalculator.gd" id="2_damage"]
[ext_resource type="Script" path="res://src/systems/combat/SkillSystem.gd" id="3_skill"]
[ext_resource type="Script" path="res://src/systems/combat/EquipmentSystem.gd" id="4_equip"]
[ext_resource type="Script" path="res://src/systems/combat/RavenSystem.gd" id="5_raven"]
[ext_resource type="Script" path="res://src/systems/combat/TileGrid.gd" id="6_tilegrid"]
[ext_resource type="Script" path="res://src/systems/wave/WaveManager.gd" id="7_wave"]
[ext_resource type="Script" path="res://scenes/battle/BattleScene.gd" id="8_battlescene"]

[node name="Battle" type="Node2D"]
script = ExtResource("8_battlescene")

[node name="BattleController" type="Node" parent="."]
script = ExtResource("1_battle")
slow_motion_factor = 0.3
enable_auto_slow_on_select = true

[node name="TileGridContainer" type="Node2D" parent="."]

[node name="TileGrid" type="Node2D" parent="TileGridContainer"]
script = ExtResource("6_tilegrid")
width = 20
height = 15

[node name="TileVisuals" type="TileMap" parent="TileGridContainer"]

[node name="EntityContainer" type="Node2D" parent="."]

[node name="Crews" type="Node2D" parent="EntityContainer"]

[node name="Enemies" type="Node2D" parent="EntityContainer"]

[node name="Turrets" type="Node2D" parent="EntityContainer"]

[node name="Facilities" type="Node2D" parent="EntityContainer"]

[node name="Projectiles" type="Node2D" parent="EntityContainer"]

[node name="Systems" type="Node" parent="."]

[node name="DamageCalculator" type="Node" parent="Systems"]
script = ExtResource("2_damage")
critical_chance = 0.1
critical_multiplier = 1.5
assassination_multiplier = 2.0

[node name="SkillSystem" type="Node" parent="Systems"]
script = ExtResource("3_skill")

[node name="EquipmentSystem" type="Node" parent="Systems"]
script = ExtResource("4_equip")

[node name="RavenSystem" type="Node" parent="Systems"]
script = ExtResource("5_raven")
scout_preview_duration = 10.0
flare_duration = 10.0
flare_radius = 5
resupply_radius = 3
resupply_heal_percent = 0.5
orbital_strike_radius = 2
orbital_strike_damage = 50
orbital_strike_delay = 1.5

[node name="WaveManager" type="Node" parent="Systems"]
script = ExtResource("7_wave")

[node name="UI" type="CanvasLayer" parent="."]
layer = 10

[node name="BattleHUD" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TopBar" type="HBoxContainer" parent="UI/BattleHUD"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 50.0
grow_horizontal = 2

[node name="MarginLeft" type="MarginContainer" parent="UI/BattleHUD/TopBar"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 8

[node name="WaveLabel" type="Label" parent="UI/BattleHUD/TopBar/MarginLeft"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Wave 1/5"

[node name="Spacer" type="Control" parent="UI/BattleHUD/TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EnemyCountLabel" type="Label" parent="UI/BattleHUD/TopBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Enemies: 0"
vertical_alignment = 1

[node name="MarginRight" type="MarginContainer" parent="UI/BattleHUD/TopBar"]
layout_mode = 2
theme_override_constants/margin_right = 16

[node name="BottomBar" type="HBoxContainer" parent="UI/BattleHUD"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -120.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 16

[node name="MarginLeft" type="MarginContainer" parent="UI/BattleHUD/BottomBar"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_bottom = 16

[node name="CrewSlots" type="HBoxContainer" parent="UI/BattleHUD/BottomBar/MarginLeft"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Spacer" type="Control" parent="UI/BattleHUD/BottomBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RavenPanel" type="VBoxContainer" parent="UI/BattleHUD/BottomBar"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="RavenLabel" type="Label" parent="UI/BattleHUD/BottomBar/RavenPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "RAVEN"
horizontal_alignment = 1

[node name="RavenButtons" type="HBoxContainer" parent="UI/BattleHUD/BottomBar/RavenPanel"]
layout_mode = 2

[node name="ScoutBtn" type="Button" parent="UI/BattleHUD/BottomBar/RavenPanel/RavenButtons"]
custom_minimum_size = Vector2(60, 40)
layout_mode = 2
text = "Scout"

[node name="FlareBtn" type="Button" parent="UI/BattleHUD/BottomBar/RavenPanel/RavenButtons"]
custom_minimum_size = Vector2(60, 40)
layout_mode = 2
text = "Flare"

[node name="ResupplyBtn" type="Button" parent="UI/BattleHUD/BottomBar/RavenPanel/RavenButtons"]
custom_minimum_size = Vector2(60, 40)
layout_mode = 2
text = "Supply"

[node name="OrbitalBtn" type="Button" parent="UI/BattleHUD/BottomBar/RavenPanel/RavenButtons"]
custom_minimum_size = Vector2(60, 40)
layout_mode = 2
text = "Strike"

[node name="MarginRight" type="MarginContainer" parent="UI/BattleHUD/BottomBar"]
layout_mode = 2
theme_override_constants/margin_right = 16

[node name="Instructions" type="Label" parent="UI/BattleHUD"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -30.0
offset_right = 200.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 12
text = "[LMB] Select | [RMB] Move/Attack | [Q] Skill | [Space] Pause | [ESC] Menu"
horizontal_alignment = 1

[node name="PauseOverlay" type="ColorRect" parent="UI"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)

[node name="PauseLabel" type="Label" parent="UI/PauseOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 48
text = "PAUSED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResumeBtn" type="Button" parent="UI/PauseOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = 40.0
offset_right = 80.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
text = "RESUME"

[node name="MenuBtn" type="Button" parent="UI/PauseOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = 90.0
offset_right = 80.0
offset_bottom = 130.0
grow_horizontal = 2
grow_vertical = 2
text = "MAIN MENU"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(320, 240)
zoom = Vector2(1.5, 1.5)

[node name="Background" type="ColorRect" parent="."]
z_index = -10
offset_right = 640.0
offset_bottom = 480.0
color = Color(0.15, 0.15, 0.2, 1)
